feat: add API safe structs
